testdata/baselines/reference/submodule/compiler/enumAssignmentCompat3.errors.txt
enumAssignmentCompat3.ts(68,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
  Property 'd' is missing in type 'E'.
enumAssignmentCompat3.ts(70,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
  Each declaration of 'E.c' differs in its value, where '2' was expected but '0' was given.
enumAssignmentCompat3.ts(71,1): error TS2322: Type 'Nope' is not assignable to type 'E'.
enumAssignmentCompat3.ts(72,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
  Each declaration of 'E.c' differs in its value, where '2' was expected but '3' was given.
enumAssignmentCompat3.ts(75,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
  Property 'c' is missing in type 'E'.
enumAssignmentCompat3.ts(76,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
  Property 'a' is missing in type 'E'.
enumAssignmentCompat3.ts(77,1): error TS2322: Type 'E' is not assignable to type 'Nope'.
enumAssignmentCompat3.ts(78,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
  Each declaration of 'E.c' differs in its value, where '3' was expected but '2' was given.
enumAssignmentCompat3.ts(82,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
enumAssignmentCompat3.ts(83,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
enumAssignmentCompat3.ts(86,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
  Each declaration of 'E.c' differs in its value, where '2' was expected but '3' was given.
enumAssignmentCompat3.ts(87,1): error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
  Each declaration of 'E.c' differs in its value, where '3' was expected but '2' was given.


==== enumAssignmentCompat3.ts (12 errors) ====
    namespace First {
        export enum E {
            a, b, c,
        }
    }
    namespace Abc {
        export enum E {
            a, b, c,
        }
        export enum Nope {
            a, b, c,
        }
    }
    namespace Abcd {
        export enum E {
            a, b, c, d,
        }
    }
    namespace Ab {
        export enum E {
            a, b,
        }
    }
    namespace Cd {
        export enum E {
            c, d,
        }
    }
    namespace Const {
        export const enum E {
            a, b, c,
        }
    }
    namespace Decl {
        export declare enum E {
            a, b, c = 3,
        }
    }
    namespace Merged {
        export enum E {
            a, b, 
        }
        export enum E {
            c = 3, d,
        }
    }
    
    namespace Merged2 {
        export enum E {
            a, b, c
        }
        export module E {
            export let d = 5;
        }
    }
    
    var abc: First.E;
    var secondAbc: Abc.E;
    var secondAbcd: Abcd.E;
    var secondAb: Ab.E;
    var secondCd: Cd.E;
    var nope: Abc.Nope;
    var k: Const.E;
    var decl: Decl.E;
    var merged: Merged.E;
    var merged2: Merged2.E;
    abc = secondAbc; // ok
    abc = secondAbcd; // missing 'd'
    ~~~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Property 'd' is missing in type 'E'.
    abc = secondAb; // ok
    abc = secondCd; // missing 'd'
    ~~~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Each declaration of 'E.c' differs in its value, where '2' was expected but '0' was given.
    abc = nope; // nope!
    ~~~
!!! error TS2322: Type 'Nope' is not assignable to type 'E'.
    abc = decl; // bad - value of 'c' differs between these enums
    ~~~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Each declaration of 'E.c' differs in its value, where '2' was expected but '3' was given.
    secondAbc = abc; // ok
    secondAbcd = abc; // ok
    secondAb = abc; // missing 'c'
    ~~~~~~~~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Property 'c' is missing in type 'E'.
    secondCd = abc; // missing 'a' and 'b'
    ~~~~~~~~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Property 'a' is missing in type 'E'.
    nope = abc; // nope!
    ~~~~
!!! error TS2322: Type 'E' is not assignable to type 'Nope'.
    decl = abc; // bad - value of 'c' differs between these enums
    ~~~~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Each declaration of 'E.c' differs in its value, where '3' was expected but '2' was given.
    
    // const is only assignable to itself
    k = k;
    abc = k; // error
    ~~~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
    k = abc;
    ~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
    
    // merged enums compare all their members
    abc = merged; // missing 'd'
    ~~~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Each declaration of 'E.c' differs in its value, where '2' was expected but '3' was given.
    merged = abc; // bad - value of 'c' differs between these enums
    ~~~~~~
!!! error TS2719: Type 'E' is not assignable to type 'E'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Each declaration of 'E.c' differs in its value, where '3' was expected but '2' was given.
    abc = merged2; // ok
    merged2 = abc; // ok